--- a/ProcurementTracker/wwwroot/css/site.css
+++ b/ProcurementTracker/wwwroot/css/site.css
@@ -100,3 +100,38 @@ body{
     flex-basis: 100%;
     height: 0;
 }
+
+.details-nav {
+    position: fixed;
+    z-index: 1;
+    top: 251px;
+    right: 15px;
+    overflow-x: hidden;
+    padding: 8px 0;
+}
+
+    .details-nav a {
+        padding: 6px 8px 6px 16px;
+        text-decoration: none;
+        font-size: 14px;
+        color: #2196F3;
+        display: block;
+    }
+
+        .details-nav a:hover {
+            color: #064579;
+        }
+
+.details-content {
+    min-height: 370px;
+}
+
+@media screen and (max-height: 450px) {
+    .details-nav {
+        padding-top: 15px;
+    }
+
+        .details-nav a {
+            font-size: 14px;
+        }
+}
