--- a/ProcurementTracker/Pages/Procurements/Details.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Details.cshtml
@@ -52,7 +52,7 @@
                         @Html.DisplayNameFor(model => model.Procurement.Status)
                     </dt>
                     <dd class="col-sm-9">
-                        @Html.DisplayFor(model => model.Procurement.Status)
+                        <span class="badge bg-@Model.Procurement.StatusColorCode text-white">@Html.DisplayFor(model => model.Procurement.Status)</span>
                     </dd>
                     <dt class="col-sm-3">
                         @Html.DisplayNameFor(model => model.Procurement.Quantity)
