Closes #39 - Edit basic data only when the procurement status is NOT STARTED

--- a/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementAdministrativeReview.cshtml
+++ b/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementAdministrativeReview.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProcurementTracker.Pages.Procurements.EditModel
 
-<section>
+<section class="@(Model.HideAdministrativeReview ? "d-none" : "") @(Model.DisableAdministrativeReview ? "disabled": "")">
     <p class="h6">Administrative Review</p>
     <hr />
     <div class="form-row">
