--- a/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementNegotiations.cshtml
+++ b/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementNegotiations.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProcurementTracker.Pages.Procurements.EditModel
 
-<section>
+<section class="@(Model.HideNegotiationSection ? "d-none" : "") @(Model.DisableNegotiationSection ? "disabled": "")">
     <p class="h6">Negotiations</p>
     <hr />
     <div class="form-row">
